--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
     implementation "androidx.fragment:fragment-ktx:1.4.1"
+
+    implementation 'com.tbuonomo:dotsindicator:4.2'
 }
