--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -43,4 +47,6 @@ dependencies {
 
     implementation "androidx.fragment:fragment:1.4.1"
     implementation "androidx.fragment:fragment-ktx:1.4.1"
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1"
 }
