add training layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,22 +13,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WordsFactory">
         <activity
+            android:name=".TrainingActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.view.SplashScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".ui.view.OnBoardingScreensActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".ui.view.SignUpScreenActivity"
             android:exported="false" />
         <activity
             android:name=".ui.view.MenuActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
