--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WordsFactory">
         <activity
-            android:name=".TrainingFinishActivity"
+            android:name=".ui.view.TrainingFinishActivity"
             android:exported="false" />
         <activity
             android:name=".ui.view.QuestionActivity"
